--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     ]
   },
   "dependencies": {
+    "highcharts": "^11.1.0",
+    "highcharts-react-official": "^3.2.1",
+    "ml-pca": "^4.1.1",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
