--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "pca-plot",
-  "private": false,
   "version": "1.0.0",
   "type": "module",
-  "main": "src/main.jsx",
+  "main": "dist/pca-plot.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -34,14 +36,12 @@
     ]
   },
   "dependencies": {
-    "@blueprintjs/core": "^5.6.0",
+    "@blueprintjs/core": "^5.7.1",
     "file-saver": "^2.0.5",
     "highcharts": "^11.1.0",
     "highcharts-react-official": "^3.2.1",
     "ml-pca": "^4.1.1",
-    "papaparse": "^5.4.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "papaparse": "^5.4.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.2",
@@ -60,8 +60,11 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.31",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-css-injected-by-js": "^3.3.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
